[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "astsearch"
authors = [
    {name = "Thomas Kluyver", email = "thomas@kluyver.me.uk"},
]
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = ["astcheck (>=0.4)"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing"
]
dynamic = ["version", "description"]

[project.scripts]
astsearch = "astsearch:main"

[project.urls]
Home = "https://github.com/takluyver/astsearch"
